src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ADR_Target__c</fullName>
        <description>Prioritization of Target Accounts</description>
        <label>ADR Target</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW engaged/Inside do not call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW engaged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AMB_Parent_Name__c</fullName>
        <label>AMB Parent Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AM_Best_Load_Date__c</fullName>
        <label>Load Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Best_No__c</fullName>
        <inlineHelpText>AM Best number; occasionally used for matching existing records to new import records.</inlineHelpText>
        <label>AM Best No</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Best_Parent_number__c</fullName>
        <label>AM_Best_Parent_number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Best_Ultimate_Parent_Number__c</fullName>
        <label>AM_Best_Ultimate Parent Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Best_Ultimate_Parent__c</fullName>
        <label>AM_Best_Ultimate Parent</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Able_to_Mention_Customer_Name__c</fullName>
        <label>Able to Mention Customer Name?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Development_Plan__c</fullName>
        <description>What are is your plan or next steps leading to an opportunity creation?</description>
        <inlineHelpText>What are is your plan or next steps leading to an opportunity creation?</inlineHelpText>
        <label>Account Development Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Name_Internal__c</fullName>
        <inlineHelpText>Use this field to input Guidewire Internal account name. Use the Account Name for Legal/Billing Purposes which will be integrated with Financial Billing system.</inlineHelpText>
        <label>Account Name (Internal)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Translated__c</fullName>
        <description>This field was created to enter the translated company name. it was specifically created for Chinese account.</description>
        <label>Account Name Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregate_Org_Tier__c</fullName>
        <description>The tier of the entire consolidated organization.</description>
        <inlineHelpText>The tier of the entire consolidated organization. For example, Liberty Mutual&apos;s child company may be less then $5B. Each child is still in the $5B or above tier.,</inlineHelpText>
        <label>Tier Aggregate Organization</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1 : DWP &gt;= $5B</fullName>
                <color>#663333</color>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2 : $5B &gt; DWP &gt;= $300M</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3 : $300M &gt; DWP &gt;= $100M</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4:  $100M &gt; DWP</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Not Set</fullName>
                <color>#FFCC33</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alliance_Type__c</fullName>
        <label>Alliance Type</label>
        <picklist>
            <picklistValues>
                <fullName>PartnerConnect - Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PartnerConnect - Consulting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmit Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Submitter__c</fullName>
        <label>Approval Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Associated_Platinum_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associated Platinum Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <label>Auditor</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAO2006__c</fullName>
        <description>Notes from By Appoitment Only</description>
        <label>BAO2006</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BillingCenter__c</fullName>
        <label>BillingCenter</label>
        <summarizedField>Opportunity.BillingCenter__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_vs_Buy_Claims__c</fullName>
        <label>DELETE Build vs. Buy (Claims)</label>
        <picklist>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buying_Entity__c</fullName>
        <inlineHelpText>Whether, in our judgment, this entity makes independent decisions about system purchases (as opposed to a subsidiary that has no operational distinction from its parent).</inlineHelpText>
        <label>Buying Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPQ_Account_Billing_Country_from_LU__c</fullName>
        <formula>pw_cc__BillingCountryLookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Country from LU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Workman_s_Comp_ClaimCenter_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workman&apos;s Comp ClaimCenter Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_Account__c</fullName>
        <label>DELETE CSC Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSC_Open_To_Change__c</fullName>
        <label>DELETE CSC Open To Change</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSC_System__c</fullName>
        <inlineHelpText>CSC system(s) that we believe the account is using</inlineHelpText>
        <label>DELETE CSC System</label>
        <picklist>
            <picklistValues>
                <fullName>COGEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POINT IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CS_Account_Short_Name__c</fullName>
        <label>Account Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Contractual_Penalties__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if Account has contractual penalities</description>
        <label>Contractual Penalties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_DM_Included_in_ACP_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Included in ACP Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_GPS_Number__c</fullName>
        <description>GPS Number</description>
        <label>GPS Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Rally_Licensed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rally Licensed checkbox</description>
        <label>Rally Licensed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Rally_Licenses_Provided__c</fullName>
        <label>Number of Rally Licenses Provided</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Reporting_Requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to identify if this account has the SLA reporting requirement</description>
        <label>Reporting Requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Right_Now_Id__c</fullName>
        <externalId>true</externalId>
        <label>Right Now Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CS_TimeZone__c</fullName>
        <label>TimeZone</label>
        <picklist>
            <picklistValues>
                <fullName>GMT+1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+5.5 (India)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT+9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Business Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_Type__c</fullName>
        <description>What is their Business</description>
        <label>Carrier Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lloyd’s Syndicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers Compensation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ClaimCenter_Go_Live_Date__c</fullName>
        <label>ClaimCenter Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClaimCenter_LOBs__c</fullName>
        <description>The category of LOB in ClaimCenter</description>
        <label>ClaimCenter LOB Category</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers Comp</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ClaimCenter__c</fullName>
        <label>ClaimCenter</label>
        <summarizedField>Opportunity.ClaimCenter__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Combined_Ratio__c</fullName>
        <label>Combined Ratio</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment_Partner_Other__c</fullName>
        <label>Comment(Partner - Other)</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_Referenceable_Status__c</fullName>
        <label>Comments on Referenceable Status</label>
        <length>131050</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Acquired__c</fullName>
        <globalPicklist>Company_Acquired</globalPicklist>
        <label>Company Acquired</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmed_by_Guidewire__c</fullName>
        <inlineHelpText>This field and Rating (above) are based on the Vanella campaign.</inlineHelpText>
        <label>Confirmed by Guidewire</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Connections_07_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did any employees of this company register to attend Connections 2007?</description>
        <label>Connections 07 Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <inlineHelpText>Our relationship with the account.  Use Description field for information about the account itself.  Use System Comments (below) for information about their systems.</inlineHelpText>
        <label>Account Status</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Loss_Date__c</fullName>
        <description>CPQ Track2 - US1</description>
        <label>Customer Loss Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Onboard_Date__c</fullName>
        <description>CPQ Track2 - US1</description>
        <label>Customer Onboard Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Page_URL__c</fullName>
        <label>Customer Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Field identifies who the Customer Relationship Manager is for that account.  Lookup to User Record.</inlineHelpText>
        <label>Customer Relationship Mgr</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.  User must have CRM Role.</errorMessage>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>NA_Sales_Executive_CRM, The_Americas_RVP_CRM</value>
            </filterItems>
            <infoMessage>Please pick appropriate CRM.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Since__c</fullName>
        <description>Date of first won deal</description>
        <inlineHelpText>Date of first won deal</inlineHelpText>
        <label>Customer Since</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed - Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DWPUpdateDate__c</fullName>
        <inlineHelpText>Field maintained by Brad Baldwin.</inlineHelpText>
        <label>DWP Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DWP_Currency__c</fullName>
        <label>DWP Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAR</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DWP_Exchange_Rate__c</fullName>
        <label>DWP Exchange Rate</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWP_Source__c</fullName>
        <inlineHelpText>Field maintained by Brad Baldwin.</inlineHelpText>
        <label>DWP Source</label>
        <picklist>
            <picklistValues>
                <fullName>AM BEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurer provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Won_Deal__c</fullName>
        <label>Date of Last Won Deal</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Default_Billing_Currency_Mismatch__c</fullName>
        <label>Default Billing Currency (Mismatch)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_License_Date_Signed__c</fullName>
        <label>Ready for Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_License_Expires__c</fullName>
        <label>Ready for Date Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Premiums__c</fullName>
        <label>Direct Premiums</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <inlineHelpText>Field maintained by Brad Baldwin.</inlineHelpText>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Captive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
                <color>#3366FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Domicile_Country__c</fullName>
        <inlineHelpText>Field maintained by Brad Baldwin.</inlineHelpText>
        <label>Domicile Country</label>
        <picklist>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paraguay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puerto Rico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expense_Ratio__c</fullName>
        <label>Expense Ratio</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fifth_LOB__c</fullName>
        <label>Fifth LOB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fifth_State__c</fullName>
        <label>Fifth State</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Data_Year__c</fullName>
        <inlineHelpText>The year for which Financial Data or AM Best data was imported.  For AMBest - note that &quot;2005&quot; means this is data for the 2005, imported in late 2006.</inlineHelpText>
        <label>Financial Data Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_LOB__c</fullName>
        <label>First LOB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_State__c</fullName>
        <label>First State</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_LOB__c</fullName>
        <label>Fourth LOB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_State__c</fullName>
        <label>Fourth State</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Person_to_make_the_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Responsible for Requests</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>